[package]
name = "wasp-hls"
version = "0.4.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/rs-core/lib.rs"




[features]
default = ["console_error_panic_hook"]


[dependencies]
wasm-bindgen = "0.2.100"
thiserror = "2.0.12"
console_error_panic_hook = { version = "0.1.7", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"